chore: webpack and rollup tooling

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<title>Parcel Sandbox</title>
-	<meta charset="UTF-8" />
-	<link rel="stylesheet" type="text/css" href="style.css"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Marble Attractor</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet">
 </head>
 <body>
-	<div class="mouse-pointer"></div>
-	<script src="src/index.js"></script>
+    <div class="mouse-pointer"></div>
 </body>
-
 </html>
